--- a/src/settings.json
+++ b/src/settings.json
@@ -1,7 +1,7 @@
 {
 	"prefix": ".",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "+62887435047326",
+	"ownerNumber": "6281804832728",
+	"ownerNumberr": "+6281318759394",
 	"cr": "Zeeoneofc",
 	"yt":"https://youtube.com/c/zeeoneofc",
 	"grub": "bit.ly/gczeeoneofc",
@@ -10,10 +10,10 @@
 	"ig": "https://instagram.com/zeeoneofc",
 	"gt": "https://github.com/zeeoneofc",	
 	"naylachan": "```Wait a few second...```",	
-	"ownername": "ZeeoneOfc",
-	"botname2":"ΛᄂPΉΛ BӨƬ",
+	"ownername": "AjurChM",
+	"botname2":"Chromosome BӨƬ",
 	"thumb":"Alphabot.jpg",
-	"namebot": "「  Alphabot  」\nCreated By @Zeeoneofc ",	
+	"namebot": "「  BoT-Chromosome  」\nCreated By @Zeeoneofc ",	
 	"apixteam": "0e6e5fc51d43de7e",
 	"apivhtear": "Your-apikey",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
